Fix some issues with new color theme contrast and add accent color in some parts of the site

--- a/src/app.css
+++ b/src/app.css
@@ -5,7 +5,3 @@
   touch-action: pan-x pan-y;
   height: 100%;
 }
-
-body {
-  background-color: #18181b; /* zinc-900 */
-}
